Otro2 index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perritos</title>
-</head>
+    <title> Perritos negros </title>
+</head> 
 <body>
-    Hola
+    Hola NO nada de hola racista
 </body>
 </html>
