--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Perritos</title>
 </head> 
 <body>
+    <header>
     
+    </header>
+    <main>
+        
+    </main>
 </body>
 </html>
