--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perritos</title>
+    <link rel="stylesheet" href="/css/style.css"/>
 </head> 
 <body>
     <header>
-    
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#"> LOGO </a>
+            <ul class="nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"> Inicio </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> Contactos </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> Sobre nosotros </a>
+                </li>
+            </ul>
     </header>
     <main>
         
