Index main updated with containers and photos. Photos added to img folder. CSS in progress for this commit.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--CSS:-->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <!--FONTS:-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+
     <title>Perritos </title>
 </head> 
 <body>
@@ -22,26 +30,57 @@
             </ul>
     </header>
     <main>
-        <section>
-            <article>
-
-            </article>
-            <article>
-
-            </article>
-            <article>
-                
-            </article>
-            <article>
-
-            </article>
-            <article>
-
-            </article>
-            <article>
-                
-            </article>
-        </section>
+            <section>
+                <div class="photo_container">
+                    <img src="img/Dafne.jpeg" alt="Dafne">
+                    <p>Dafne</p>
+                    <p>Tamaño:</p>
+                    <p>Mediana</p>
+                </div>
+                <div class="photo_container">
+                    <img src="img/Desider.jpeg" alt="Desider">
+                    <p>Desider</p>
+                    <p>Tamaño:</p>
+                    <p>Grande</p>
+                </div>
+                <div class="photo_container">
+                    <img src="img/Eros.jpeg" alt="Eros">
+                    <p>Eros</p>
+                    <p>Tamaño:</p>
+                    <p>Grande</p>
+                </div>
+                <div class="photo_container">
+                    <img src="img/Kala.jpeg" alt="Kala">
+                    <p>Kala</p>
+                    <p>Tamaño:</p>
+                    <p>Grande</p>
+                </div>
+                <div class="photo_container">
+                    <img src="img/Lavinia.jpeg" alt="Lavinia">
+                    <p>Lavinia</p>
+                    <p>Tamaño:</p>
+                    <p>Mediana</p>
+                </div>
+                <div class="photo_container">
+                    <img src="img/Lewis.jpeg" alt="Lewis">
+                    <p>Lewis</p>
+                    <p>Tamaño:</p>
+                    <p>Mediana</p>
+                </div>
+                <div class="photo_container">
+                    <img src="img/Mela.jpeg" alt="Mela">
+                    <p>Mela</p>
+                    <p>Tamaño:</p>
+                    <p>Pequeña</p>
+                </div>
+                <div class="photo_container">
+                    <img src="img/Neska.jpeg" alt="Neska">
+                    <p>Neska</p>
+                    <p>Tamaño:</p>
+                    <p>Grande</p>
+                </div>
+            </section>
+            </section>        
     </main>
 </body>
 </html>
