Added hidden containers for index.html

--- a/index.html
+++ b/index.html
@@ -30,57 +30,125 @@
             </ul>
     </header>
     <main>
-            <section>
-                <div class="photo_container">
-                    <img src="img/Dafne.jpeg" alt="Dafne">
-                    <p>Dafne</p>
-                    <p>Tamaño:</p>
-                    <p>Mediana</p>
-                </div>
-                <div class="photo_container">
-                    <img src="img/Desider.jpeg" alt="Desider">
-                    <p>Desider</p>
-                    <p>Tamaño:</p>
-                    <p>Grande</p>
-                </div>
-                <div class="photo_container">
-                    <img src="img/Eros.jpeg" alt="Eros">
-                    <p>Eros</p>
-                    <p>Tamaño:</p>
-                    <p>Grande</p>
-                </div>
-                <div class="photo_container">
-                    <img src="img/Kala.jpeg" alt="Kala">
-                    <p>Kala</p>
-                    <p>Tamaño:</p>
-                    <p>Grande</p>
-                </div>
-                <div class="photo_container">
-                    <img src="img/Lavinia.jpeg" alt="Lavinia">
-                    <p>Lavinia</p>
-                    <p>Tamaño:</p>
-                    <p>Mediana</p>
-                </div>
-                <div class="photo_container">
-                    <img src="img/Lewis.jpeg" alt="Lewis">
-                    <p>Lewis</p>
-                    <p>Tamaño:</p>
-                    <p>Mediana</p>
-                </div>
-                <div class="photo_container">
-                    <img src="img/Mela.jpeg" alt="Mela">
-                    <p>Mela</p>
-                    <p>Tamaño:</p>
-                    <p>Pequeña</p>
-                </div>
-                <div class="photo_container">
-                    <img src="img/Neska.jpeg" alt="Neska">
-                    <p>Neska</p>
-                    <p>Tamaño:</p>
-                    <p>Grande</p>
-                </div>
-            </section>
-            </section>        
+        <!--CONTAINERS PRINCIPALES:-->
+        <section>
+            <div class="photo_container">
+                <img src="img/Dafne.jpeg" alt="Dafne">
+                <p>Dafne</p>
+                <p>Tamaño:</p>
+                <p>Mediana</p>
+            </div>
+            <div class="photo_container">
+                <img src="img/Desider.jpeg" alt="Desider">
+                <p>Desider</p>
+                <p>Tamaño:</p>
+                <p>Grande</p>
+            </div>
+            <div class="photo_container">
+                <img src="img/Eros.jpeg" alt="Eros">
+                <p>Eros</p>
+                <p>Tamaño:</p>
+                <p>Grande</p>
+            </div>
+            <div class="photo_container">
+                <img src="img/Kala.jpeg" alt="Kala">
+                <p>Kala</p>
+                <p>Tamaño:</p>
+                <p>Grande</p>
+            </div>
+            <div class="photo_container">
+                <img src="img/Lavinia.jpeg" alt="Lavinia">
+                <p>Lavinia</p>
+                <p>Tamaño:</p>
+                <p>Mediana</p>
+            </div>
+            <div class="photo_container">
+                <img src="img/Lewis.jpeg" alt="Lewis">
+                <p>Lewis</p>
+                <p>Tamaño:</p>
+                <p>Mediana</p>
+            </div>
+            <div class="photo_container">
+                <img src="img/Mela.jpeg" alt="Mela">
+                <p>Mela</p>
+                <p>Tamaño:</p>
+                <p>Pequeña</p>
+            </div>
+            <div class="photo_container">
+                <img src="img/Neska.jpeg" alt="Neska">
+                <p>Neska</p>
+                <p>Tamaño:</p>
+                <p>Grande</p>
+            </div>
+        </section>
+
+        <!--CONTAINERS ESCONDIDOS:-->
+        <div id="descrip_container">
+            <div id="descrip_perro1">
+                <img src="img/Dafne.jpeg" alt="Dafne">
+                <p>Dafne</p>
+                <p>Tamaño:</p>
+                <p>Mediana</p>
+                <p>Descripción:</p>
+                <p>...</p>
+            </div>
+            <div id="descrip_perro2">
+                <img src="img/Desider.jpeg" alt="Desider">
+                <p>Desider</p>
+                <p>Tamaño:</p>
+                <p>Grande</p>
+                <p>Descripción:</p>
+                <p>...</p>
+            </div>
+            <div id="descrip_perro3">
+                <img src="img/Eros.jpeg" alt="Eros">
+                <p>Eros</p>
+                <p>Tamaño:</p>
+                <p>Grande</p>
+                <p>Descripción:</p>
+                <p>...</p>
+            </div>
+            <div id="descrip_perro4">
+                <img src="img/Kala.jpeg" alt="Kala">
+                <p>Kala</p>
+                <p>Tamaño:</p>
+                <p>Grande</p>
+                <p>Descripción:</p>
+                <p>...</p>
+            </div>
+            <div id="descrip_perro5">
+                <img src="img/Lavinia.jpeg" alt="Lavinia">
+                <p>Lavinia</p>
+                <p>Tamaño:</p>
+                <p>Mediana</p>
+                <p>Descripción:</p>
+                <p>...</p>
+            </div>
+            <div id="descrip_perro6">
+                <img src="img/Lewis.jpeg" alt="Lewis">
+                <p>Lewis</p>
+                <p>Tamaño:</p>
+                <p>Mediana</p>
+                <p>Descripción:</p>
+                <p>...</p>
+            </div>
+            <div id="descrip_perro7">
+                <img src="img/Mela.jpeg" alt="Mela">
+                <p>Mela</p>
+                <p>Tamaño:</p>
+                <p>Pequeña</p>
+                <p>Descripción:</p>
+                <p>...</p>
+            </div>
+            <div id="descrip_perro8">
+                <img src="img/Neska.jpeg" alt="Neska">
+                <p>Neska</p>
+                <p>Tamaño:</p>
+                <p>Grande</p>
+                <p>Descripción:</p>
+                <p>...</p>
+            </div>
+        </div>       
     </main>
 </body>
 </html>
