--- a/index.html
+++ b/index.html
@@ -32,49 +32,49 @@
     <main>
         <!--CONTAINERS PRINCIPALES:-->
         <section>
-            <div class="photo_container">
+            <div class="photo_container" id="photo_perro1">
                 <img src="img/Dafne.jpeg" alt="Dafne">
                 <p>Dafne</p>
                 <p>Tamaño:</p>
                 <p>Mediana</p>
             </div>
-            <div class="photo_container">
+            <div class="photo_container" id="photo_perro2">
                 <img src="img/Desider.jpeg" alt="Desider">
                 <p>Desider</p>
                 <p>Tamaño:</p>
                 <p>Grande</p>
             </div>
-            <div class="photo_container">
+            <div class="photo_container" id="photo_perro3">
                 <img src="img/Eros.jpeg" alt="Eros">
                 <p>Eros</p>
                 <p>Tamaño:</p>
                 <p>Grande</p>
             </div>
-            <div class="photo_container">
+            <div class="photo_container" id="photo_perro4">
                 <img src="img/Kala.jpeg" alt="Kala">
                 <p>Kala</p>
                 <p>Tamaño:</p>
                 <p>Grande</p>
             </div>
-            <div class="photo_container">
+            <div class="photo_container" id="photo_perro5">
                 <img src="img/Lavinia.jpeg" alt="Lavinia">
                 <p>Lavinia</p>
                 <p>Tamaño:</p>
                 <p>Mediana</p>
             </div>
-            <div class="photo_container">
+            <div class="photo_container" id="photo_perro6">
                 <img src="img/Lewis.jpeg" alt="Lewis">
                 <p>Lewis</p>
                 <p>Tamaño:</p>
                 <p>Mediana</p>
             </div>
-            <div class="photo_container">
+            <div class="photo_container" id="photo_perro7">
                 <img src="img/Mela.jpeg" alt="Mela">
                 <p>Mela</p>
                 <p>Tamaño:</p>
                 <p>Pequeña</p>
             </div>
-            <div class="photo_container">
+            <div class="photo_container" id="photo_perro8">
                 <img src="img/Neska.jpeg" alt="Neska">
                 <p>Neska</p>
                 <p>Tamaño:</p>
@@ -83,8 +83,8 @@
         </section>
 
         <!--CONTAINERS ESCONDIDOS:-->
-        <div id="descrip_container">
-            <div id="descrip_perro1">
+        <div id="descrip_div">
+            <div class="descrip_container" id="descrip_perro1">
                 <img src="img/Dafne.jpeg" alt="Dafne">
                 <p>Dafne</p>
                 <p>Tamaño:</p>
@@ -92,7 +92,7 @@
                 <p>Descripción:</p>
                 <p>...</p>
             </div>
-            <div id="descrip_perro2">
+            <div class="descrip_container" id="descrip_perro2">
                 <img src="img/Desider.jpeg" alt="Desider">
                 <p>Desider</p>
                 <p>Tamaño:</p>
@@ -100,7 +100,7 @@
                 <p>Descripción:</p>
                 <p>...</p>
             </div>
-            <div id="descrip_perro3">
+            <div class="descrip_container" id="descrip_perro3">
                 <img src="img/Eros.jpeg" alt="Eros">
                 <p>Eros</p>
                 <p>Tamaño:</p>
@@ -108,7 +108,7 @@
                 <p>Descripción:</p>
                 <p>...</p>
             </div>
-            <div id="descrip_perro4">
+            <div class="descrip_container" id="descrip_perro4">
                 <img src="img/Kala.jpeg" alt="Kala">
                 <p>Kala</p>
                 <p>Tamaño:</p>
@@ -116,7 +116,7 @@
                 <p>Descripción:</p>
                 <p>...</p>
             </div>
-            <div id="descrip_perro5">
+            <div class="descrip_container" id="descrip_perro5">
                 <img src="img/Lavinia.jpeg" alt="Lavinia">
                 <p>Lavinia</p>
                 <p>Tamaño:</p>
@@ -124,7 +124,7 @@
                 <p>Descripción:</p>
                 <p>...</p>
             </div>
-            <div id="descrip_perro6">
+            <div class="descrip_container" id="descrip_perro6">
                 <img src="img/Lewis.jpeg" alt="Lewis">
                 <p>Lewis</p>
                 <p>Tamaño:</p>
@@ -132,7 +132,7 @@
                 <p>Descripción:</p>
                 <p>...</p>
             </div>
-            <div id="descrip_perro7">
+            <div class="descrip_container" id="descrip_perro7">
                 <img src="img/Mela.jpeg" alt="Mela">
                 <p>Mela</p>
                 <p>Tamaño:</p>
@@ -140,7 +140,7 @@
                 <p>Descripción:</p>
                 <p>...</p>
             </div>
-            <div id="descrip_perro8">
+            <div class="descrip_container" id="descrip_perro8">
                 <img src="img/Neska.jpeg" alt="Neska">
                 <p>Neska</p>
                 <p>Tamaño:</p>
