JS Script deleted

--- a/index.html
+++ b/index.html
@@ -32,49 +32,49 @@
     <main>
         <!--CONTAINERS PRINCIPALES:-->
         <section>
-            <div class="photo_container" id="photo_perro1">
+            <div class="photo_container" id="photo_perro1" data-target="descrip_perro1">
                 <img src="img/Dafne.jpeg" alt="Dafne">
                 <p>Dafne</p>
                 <p>Tamaño:</p>
                 <p>Mediana</p>
             </div>
-            <div class="photo_container" id="photo_perro2">
+            <div class="photo_container" id="photo_perro2" data-target="descrip_perro2">
                 <img src="img/Desider.jpeg" alt="Desider">
                 <p>Desider</p>
                 <p>Tamaño:</p>
                 <p>Grande</p>
             </div>
-            <div class="photo_container" id="photo_perro3">
+            <div class="photo_container" id="photo_perro3" data-target="descrip_perro3">
                 <img src="img/Eros.jpeg" alt="Eros">
                 <p>Eros</p>
                 <p>Tamaño:</p>
                 <p>Grande</p>
             </div>
-            <div class="photo_container" id="photo_perro4">
+            <div class="photo_container" id="photo_perro4" data-target="descrip_perro4">
                 <img src="img/Kala.jpeg" alt="Kala">
                 <p>Kala</p>
                 <p>Tamaño:</p>
                 <p>Grande</p>
             </div>
-            <div class="photo_container" id="photo_perro5">
+            <div class="photo_container" id="photo_perro5" data-target="descrip_perro5">
                 <img src="img/Lavinia.jpeg" alt="Lavinia">
                 <p>Lavinia</p>
                 <p>Tamaño:</p>
                 <p>Mediana</p>
             </div>
-            <div class="photo_container" id="photo_perro6">
+            <div class="photo_container" id="photo_perro6" data-target="descrip_perro6">
                 <img src="img/Lewis.jpeg" alt="Lewis">
                 <p>Lewis</p>
                 <p>Tamaño:</p>
                 <p>Mediana</p>
             </div>
-            <div class="photo_container" id="photo_perro7">
+            <div class="photo_container" id="photo_perro7" data-target="descrip_perro7">
                 <img src="img/Mela.jpeg" alt="Mela">
                 <p>Mela</p>
                 <p>Tamaño:</p>
                 <p>Pequeña</p>
             </div>
-            <div class="photo_container" id="photo_perro8">
+            <div class="photo_container" id="photo_perro8" data-target="descrip_perro8">
                 <img src="img/Neska.jpeg" alt="Neska">
                 <p>Neska</p>
                 <p>Tamaño:</p>
@@ -109,7 +109,7 @@
                 <p>...</p>
             </div>
             <div class="descrip_container" id="descrip_perro4">
-                <img src="img/Kala.jpeg" alt="Kala">
+                <img src="img/Kala.jpeg"s alt="Kala">
                 <p>Kala</p>
                 <p>Tamaño:</p>
                 <p>Grande</p>
