Added aside. Grouped main and aside in a div. Turned main and aside into display: flex.

--- a/index.html
+++ b/index.html
@@ -29,126 +29,145 @@
                 </li>
             </ul>
     </header>
-    <main>
-        <!--CONTAINERS PRINCIPALES:-->
-        <section>
-            <div class="photo_container" id="photo_perro1" data-target="descrip_perro1">
-                <img src="img/Dafne.jpeg" alt="Dafne">
-                <p>Dafne</p>
-                <p>Tamaño:</p>
-                <p>Mediana</p>
-            </div>
-            <div class="photo_container" id="photo_perro2" data-target="descrip_perro2">
-                <img src="img/Desider.jpeg" alt="Desider">
-                <p>Desider</p>
-                <p>Tamaño:</p>
-                <p>Grande</p>
-            </div>
-            <div class="photo_container" id="photo_perro3" data-target="descrip_perro3">
-                <img src="img/Eros.jpeg" alt="Eros">
-                <p>Eros</p>
-                <p>Tamaño:</p>
-                <p>Grande</p>
-            </div>
-            <div class="photo_container" id="photo_perro4" data-target="descrip_perro4">
-                <img src="img/Kala.jpeg" alt="Kala">
-                <p>Kala</p>
-                <p>Tamaño:</p>
-                <p>Grande</p>
-            </div>
-            <div class="photo_container" id="photo_perro5" data-target="descrip_perro5">
-                <img src="img/Lavinia.jpeg" alt="Lavinia">
-                <p>Lavinia</p>
-                <p>Tamaño:</p>
-                <p>Mediana</p>
-            </div>
-            <div class="photo_container" id="photo_perro6" data-target="descrip_perro6">
-                <img src="img/Lewis.jpeg" alt="Lewis">
-                <p>Lewis</p>
-                <p>Tamaño:</p>
-                <p>Mediana</p>
-            </div>
-            <div class="photo_container" id="photo_perro7" data-target="descrip_perro7">
-                <img src="img/Mela.jpeg" alt="Mela">
-                <p>Mela</p>
-                <p>Tamaño:</p>
-                <p>Pequeña</p>
-            </div>
-            <div class="photo_container" id="photo_perro8" data-target="descrip_perro8">
-                <img src="img/Neska.jpeg" alt="Neska">
-                <p>Neska</p>
-                <p>Tamaño:</p>
-                <p>Grande</p>
-            </div>
-        </section>
+    <div id="cuerpo_pagina">
+        <main>
+            <!--CONTAINERS PRINCIPALES:-->
+            <section>
+                <div class="photo_container" id="photo_perro1" data-target="descrip_perro1">
+                    <img src="img/Dafne.jpeg" alt="Dafne">
+                    <p>Dafne</p>
+                    <p>Tamaño:</p>
+                    <p>Mediana</p>
+                </div>
+                <div class="photo_container" id="photo_perro2" data-target="descrip_perro2">
+                    <img src="img/Desider.jpeg" alt="Desider">
+                    <p>Desider</p>
+                    <p>Tamaño:</p>
+                    <p>Grande</p>
+                </div>
+                <div class="photo_container" id="photo_perro3" data-target="descrip_perro3">
+                    <img src="img/Eros.jpeg" alt="Eros">
+                    <p>Eros</p>
+                    <p>Tamaño:</p>
+                    <p>Grande</p>
+                </div>
+                <div class="photo_container" id="photo_perro4" data-target="descrip_perro4">
+                    <img src="img/Kala.jpeg" alt="Kala">
+                    <p>Kala</p>
+                    <p>Tamaño:</p>
+                    <p>Grande</p>
+                </div>
+                <div class="photo_container" id="photo_perro5" data-target="descrip_perro5">
+                    <img src="img/Lavinia.jpeg" alt="Lavinia">
+                    <p>Lavinia</p>
+                    <p>Tamaño:</p>
+                    <p>Mediana</p>
+                </div>
+                <div class="photo_container" id="photo_perro6" data-target="descrip_perro6">
+                    <img src="img/Lewis.jpeg" alt="Lewis">
+                    <p>Lewis</p>
+                    <p>Tamaño:</p>
+                    <p>Mediana</p>
+                </div>
+                <div class="photo_container" id="photo_perro7" data-target="descrip_perro7">
+                    <img src="img/Mela.jpeg" alt="Mela">
+                    <p>Mela</p>
+                    <p>Tamaño:</p>
+                    <p>Pequeña</p>
+                </div>
+                <div class="photo_container" id="photo_perro8" data-target="descrip_perro8">
+                    <img src="img/Neska.jpeg" alt="Neska">
+                    <p>Neska</p>
+                    <p>Tamaño:</p>
+                    <p>Grande</p>
+                </div>
+            </section>
 
-        <!--CONTAINERS ESCONDIDOS:-->
-        <div id="descrip_div">
-            <div class="descrip_container" id="descrip_perro1">
-                <img src="img/Dafne.jpeg" alt="Dafne">
-                <p>Dafne</p>
-                <p>Tamaño:</p>
-                <p>Mediana</p>
-                <p>Descripción:</p>
-                <p>...</p>
+            <!--CONTAINERS ESCONDIDOS:-->
+            <section id="descrip_section">
+                <div class="descrip_container" id="descrip_perro1">
+                    <img src="img/Dafne.jpeg" alt="Dafne">
+                    <p>Dafne</p>
+                    <p>Tamaño:</p>
+                    <p>Mediana</p>
+                    <p>Descripción:</p>
+                    <p>...</p>
+                </div>
+                <div class="descrip_container" id="descrip_perro2">
+                    <img src="img/Desider.jpeg" alt="Desider">
+                    <p>Desider</p>
+                    <p>Tamaño:</p>
+                    <p>Grande</p>
+                    <p>Descripción:</p>
+                    <p>...</p>
+                </div>
+                <div class="descrip_container" id="descrip_perro3">
+                    <img src="img/Eros.jpeg" alt="Eros">
+                    <p>Eros</p>
+                    <p>Tamaño:</p>
+                    <p>Grande</p>
+                    <p>Descripción:</p>
+                    <p>...</p>
+                </div>
+                <div class="descrip_container" id="descrip_perro4">
+                    <img src="img/Kala.jpeg"s alt="Kala">
+                    <p>Kala</p>
+                    <p>Tamaño:</p>
+                    <p>Grande</p>
+                    <p>Descripción:</p>
+                    <p>...</p>
+                </div>
+                <div class="descrip_container" id="descrip_perro5">
+                    <img src="img/Lavinia.jpeg" alt="Lavinia">
+                    <p>Lavinia</p>
+                    <p>Tamaño:</p>
+                    <p>Mediana</p>
+                    <p>Descripción:</p>
+                    <p>...</p>
+                </div>
+                <div class="descrip_container" id="descrip_perro6">
+                    <img src="img/Lewis.jpeg" alt="Lewis">
+                    <p>Lewis</p>
+                    <p>Tamaño:</p>
+                    <p>Mediana</p>
+                    <p>Descripción:</p>
+                    <p>...</p>
+                </div>
+                <div class="descrip_container" id="descrip_perro7">
+                    <img src="img/Mela.jpeg" alt="Mela">
+                    <p>Mela</p>
+                    <p>Tamaño:</p>
+                    <p>Pequeña</p>
+                    <p>Descripción:</p>
+                    <p>...</p>
+                </div>
+                <div class="descrip_container" id="descrip_perro8">
+                    <img src="img/Neska.jpeg" alt="Neska">
+                    <p>Neska</p>
+                    <p>Tamaño:</p>
+                    <p>Grande</p>
+                    <p>Descripción:</p>
+                    <p>...</p>
+                </div>
+            </section>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </main>
+        <aside>
+            <div class="comentario">
+                <p><b>P: </b>¿Qué necesito para adoptar un perro?</p>
+                <p><b>R: </b>Debes ser mayor de edad, presentar una identificación oficial, comprobante de domicilio, y completar un formulario de adopción.</p>
             </div>
-            <div class="descrip_container" id="descrip_perro2">
-                <img src="img/Desider.jpeg" alt="Desider">
-                <p>Desider</p>
-                <p>Tamaño:</p>
-                <p>Grande</p>
-                <p>Descripción:</p>
-                <p>...</p>
+            <div class="comentario">
+                <p><b>P: </b>¿Hay algún costo por adoptar?</p>
+                <p><b>R: </b> No, nuestro centro no cobra ninguna cuota de adopción.</p>
             </div>
-            <div class="descrip_container" id="descrip_perro3">
-                <img src="img/Eros.jpeg" alt="Eros">
-                <p>Eros</p>
-                <p>Tamaño:</p>
-                <p>Grande</p>
-                <p>Descripción:</p>
-                <p>...</p>
+            <div class="comentario">
+                <p><b>P: </b>¿Puedo adoptar un perro si vivo en un apartamento?</p>
+                <p><b>R: </b>Sí, pero se recomienda elegir una raza o tamaño que se adapte bien a espacios pequeños y comprometerse a proporcionar suficiente ejercicio diario y estimulación mental.</p>
             </div>
-            <div class="descrip_container" id="descrip_perro4">
-                <img src="img/Kala.jpeg"s alt="Kala">
-                <p>Kala</p>
-                <p>Tamaño:</p>
-                <p>Grande</p>
-                <p>Descripción:</p>
-                <p>...</p>
-            </div>
-            <div class="descrip_container" id="descrip_perro5">
-                <img src="img/Lavinia.jpeg" alt="Lavinia">
-                <p>Lavinia</p>
-                <p>Tamaño:</p>
-                <p>Mediana</p>
-                <p>Descripción:</p>
-                <p>...</p>
-            </div>
-            <div class="descrip_container" id="descrip_perro6">
-                <img src="img/Lewis.jpeg" alt="Lewis">
-                <p>Lewis</p>
-                <p>Tamaño:</p>
-                <p>Mediana</p>
-                <p>Descripción:</p>
-                <p>...</p>
-            </div>
-            <div class="descrip_container" id="descrip_perro7">
-                <img src="img/Mela.jpeg" alt="Mela">
-                <p>Mela</p>
-                <p>Tamaño:</p>
-                <p>Pequeña</p>
-                <p>Descripción:</p>
-                <p>...</p>
-            </div>
-            <div class="descrip_container" id="descrip_perro8">
-                <img src="img/Neska.jpeg" alt="Neska">
-                <p>Neska</p>
-                <p>Tamaño:</p>
-                <p>Grande</p>
-                <p>Descripción:</p>
-                <p>...</p>
-            </div>
-        </div>       
-    </main>
+        </aside>
+    </div>
+    
+
 </body>
 </html>
