Added pseudo-header (ui control)

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 </li>
             </ul>
     </header>
+    <div id="pseudo-header"></div> <!--ELIMINAR-->
     <div id="cuerpo_pagina">
         <main>
             <!--CONTAINERS PRINCIPALES:-->
