Updated photo_containers p tags

--- a/index.html
+++ b/index.html
@@ -37,42 +37,42 @@
                 <div class="photo_container" id="photo_perro1" data-target="descrip_perro1">
                     <img src="img/Dafne.jpeg" alt="Dafne">
                     <p>Dafne</p>
-                    <p><b>Tamaño:</b> Mediana</p>
+                    <p>Tamaño:<span> Mediana</span></p>
                 </div>
                 <div class="photo_container" id="photo_perro2" data-target="descrip_perro2">
                     <img src="img/Desider.jpeg" alt="Desider">
                     <p>Desider</p>
-                    <p><b>Tamaño:</b> Grande</p>
+                    <p>Tamaño:<span> Grande</span></p>
                 </div>
                 <div class="photo_container" id="photo_perro3" data-target="descrip_perro3">
                     <img src="img/Eros.jpeg" alt="Eros">
                     <p>Eros</p>
-                    <p><b>Tamaño:</b> Grande</p>
+                    <p>Tamaño:<span> Grande</span></p>
                 </div>
                 <div class="photo_container" id="photo_perro4" data-target="descrip_perro4">
                     <img src="img/Kala.jpeg" alt="Kala">
                     <p>Kala</p>
-                    <p><b>Tamaño:</b> Grande</p>
+                    <p>Tamaño:<span> Grande</span></p>
                 </div>
                 <div class="photo_container" id="photo_perro5" data-target="descrip_perro5">
                     <img src="img/Lavinia.jpeg" alt="Lavinia">
                     <p>Lavinia</p>
-                    <p><b>Tamaño:</b> Mediana</p>
+                    <p>Tamaño:<span> Mediana</span></p>
                 </div>
                 <div class="photo_container" id="photo_perro6" data-target="descrip_perro6">
                     <img src="img/Lewis.jpeg" alt="Lewis">
                     <p>Lewis</p>
-                    <p><b>Tamaño:</b> Mediana</p>
+                    <p>Tamaño:<span> Mediana</span></p>
                 </div>
                 <div class="photo_container" id="photo_perro7" data-target="descrip_perro7">
                     <img src="img/Mela.jpeg" alt="Mela">
                     <p>Mela</p>
-                    <p><b>Tamaño:</b> Pequeña</p>
+                    <p>Tamaño:<span> Pequeña</span></p>
                 </div>
                 <div class="photo_container" id="photo_perro8" data-target="descrip_perro8">
                     <img src="img/Neska.jpeg" alt="Neska">
                     <p>Neska</p>
-                    <p><b>Tamaño:</b> Grande</p>
+                    <p>Tamaño:<span> Grande</span></p>
                 </div>
             </section>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
