Some size fixes

--- a/index.html
+++ b/index.html
@@ -34,42 +34,42 @@
         <main>
             <!--CONTAINERS PRINCIPALES:-->
             <section>
-                <div class="photo_container" id="photo_perro1" data-target="descrip_perro1">
+                <div class="photo_container">
                     <img src="img/Dafne.jpeg" alt="Dafne">
                     <p>Dafne</p>
                     <p>Tamaño:<span> Mediana</span></p>
                 </div>
-                <div class="photo_container" id="photo_perro2" data-target="descrip_perro2">
+                <div class="photo_container">
                     <img src="img/Desider.jpeg" alt="Desider">
                     <p>Desider</p>
                     <p>Tamaño:<span> Grande</span></p>
                 </div>
-                <div class="photo_container" id="photo_perro3" data-target="descrip_perro3">
+                <div class="photo_container">
                     <img src="img/Eros.jpeg" alt="Eros">
                     <p>Eros</p>
                     <p>Tamaño:<span> Grande</span></p>
                 </div>
-                <div class="photo_container" id="photo_perro4" data-target="descrip_perro4">
+                <div class="photo_container">
                     <img src="img/Kala.jpeg" alt="Kala">
                     <p>Kala</p>
                     <p>Tamaño:<span> Grande</span></p>
                 </div>
-                <div class="photo_container" id="photo_perro5" data-target="descrip_perro5">
+                <div class="photo_container">
                     <img src="img/Lavinia.jpeg" alt="Lavinia">
                     <p>Lavinia</p>
                     <p>Tamaño:<span> Mediana</span></p>
                 </div>
-                <div class="photo_container" id="photo_perro6" data-target="descrip_perro6">
+                <div class="photo_container">
                     <img src="img/Lewis.jpeg" alt="Lewis">
                     <p>Lewis</p>
                     <p>Tamaño:<span> Mediana</span></p>
                 </div>
-                <div class="photo_container" id="photo_perro7" data-target="descrip_perro7">
+                <div class="photo_container">
                     <img src="img/Mela.jpeg" alt="Mela">
                     <p>Mela</p>
                     <p>Tamaño:<span> Pequeña</span></p>
                 </div>
-                <div class="photo_container" id="photo_perro8" data-target="descrip_perro8">
+                <div class="photo_container">
                     <img src="img/Neska.jpeg" alt="Neska">
                     <p>Neska</p>
                     <p>Tamaño:<span> Grande</span></p>
