Added new Doggos. Descriptions now are working.

--- a/index.html
+++ b/index.html
@@ -38,46 +38,67 @@
                     <img src="img/Dafne.jpeg" alt="Dafne">
                     <p>Dafne</p>
                     <p>Tamaño:<span> Mediana</span></p>
+                    <p class="description">PROVISIONAL Milo es un pequeño lobito super jugueton y cariñoso. Va ha aprovechar la mas minima oportunidad para robarte unas caricias y es super pacifico.</p>
                 </div>
                 <div class="photo_container">
                     <img src="img/Desider.jpeg" alt="Desider">
                     <p>Desider</p>
                     <p>Tamaño:<span> Grande</span></p>
+                    <p class="description">PROVISIONAL Milo es un pequeño lobito super jugueton y cariñoso. Va ha aprovechar la mas minima oportunidad para robarte unas caricias y es super pacifico.</p>
                 </div>
                 <div class="photo_container">
                     <img src="img/Eros.jpeg" alt="Eros">
                     <p>Eros</p>
                     <p>Tamaño:<span> Grande</span></p>
+                    <p class="description">Eros es un pastor belga con mucha energia. Le encanta jugar con los seres humanos y no es nada agresivo.</p>
                 </div>
                 <div class="photo_container">
                     <img src="img/Kala.jpeg" alt="Kala">
                     <p>Kala</p>
                     <p>Tamaño:<span> Grande</span></p>
+                    <p class="description">Kala es la bondad <i>perrificada</i>. Es super tranquila y le encanta pasear. Su hobby favorito es tumbarse con los rayos de sol en la cara. No es nada agresiva con otros perros y es super obediente y respetuosa.</p>
                 </div>
                 <div class="photo_container">
                     <img src="img/Lavinia.jpeg" alt="Lavinia">
                     <p>Lavinia</p>
                     <p>Tamaño:<span> Mediana</span></p>
+                    <p class="description">Lavinia es una galguita muy maja y feliz. Le encanta pedir cariño de los seres humanos y el resto de perros le causan indiferencia.</p>
                 </div>
                 <div class="photo_container">
                     <img src="img/Lewis.jpeg" alt="Lewis">
                     <p>Lewis</p>
                     <p>Tamaño:<span> Mediana</span></p>
+                    <p class="description">Lewis es una perrita pastora belga abandonada atada con una cadena. Es super cariñosa y le encanta jugar con las personas. Nunca ladra ni es agresiva ni con los humanos ni con otros perritos.</p>
                 </div>
                 <div class="photo_container">
                     <img src="img/Mela.jpeg" alt="Mela">
                     <p>Mela</p>
                     <p>Tamaño:<span> Pequeña</span></p>
+                    <p class="description">Mela apareció abandonada y es super simpática. Le encanta estar rodeada de humanos y otros perritos. No es agresiva y esta deseando encontrar a una familia.</p>
                 </div>
                 <div class="photo_container">
                     <img src="img/Neska.jpeg" alt="Neska">
                     <p>Neska</p>
                     <p>Tamaño:<span> Grande</span></p>
+                    <p class="description">PROVISIONAL Milo es un pequeño lobito super jugueton y cariñoso. Va ha aprovechar la mas minima oportunidad para robarte unas caricias y es super pacifico.</p>
+                </div>
+                <div class="photo_container">
+                    <img src="img/Milo.jpeg" alt="Milo">
+                    <p>Milo</p>
+                    <p>Tamaño:<span> Pequeño</span></p>
+                    <p class="description">Milo es un pequeño lobito super jugueton y cariñoso. Va ha aprovechar la mas minima oportunidad para robarte unas caricias y es super pacifico.</p>
+                </div>
+                <div class="photo_container">
+                    <img src="img/Pikachu.jpeg" alt="Pikachu">
+                    <p>Pikachu</p>
+                    <p>Tamaño:<span> Grande</span></p>
+                    <p class="description">Pikachu es un galgo de gran tamaño que le encanta pedir mimos constantemente. Le gusta mucho correr y jugar con otros perros.</p>
                 </div>
             </section>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </main>
         <aside>
+            <p><b>Preguntas comunes:</b></p>
             <div class="comentario">
                 <p><b>P: </b>¿Qué necesito para adoptar un perro?</p>
                 <p><b>R: </b>Debes ser mayor de edad, presentar una identificación oficial, comprobante de domicilio, y completar un formulario de adopción.</p>
@@ -89,6 +110,7 @@
             <div class="comentario">
                 <p><b>P: </b>¿Puedo adoptar un perro si vivo en un apartamento?</p>
                 <p><b>R: </b>Sí, pero se recomienda elegir una raza o tamaño que se adapte bien a espacios pequeños y comprometerse a proporcionar suficiente ejercicio diario y estimulación mental.</p>
+                <p class="description"></p>
             </div>
         </aside>
     </div>
