--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
             </ul>
     </header>
     <div id="pseudo-header"></div> <!--ELIMINAR-->
-    <div id="cuerpo_pagina">aaaaaaaaaaaaaaaa
+    <div id="cuerpo_pagina">
         <main>
             <!--CONTAINERS PRINCIPALES:-->
             <section>
@@ -114,7 +114,5 @@
             </div>
         </aside>
     </div>
-    
-
 </body>
 </html>
