Added footer tag

--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@
                 <p><b>R: </b>Sí, pero se recomienda elegir una raza o tamaño que se adapte bien a espacios pequeños y comprometerse a proporcionar suficiente ejercicio diario y estimulación mental.</p>
                 <p class="description"></p>
             </div>
+
         </aside>
     </div>
+    <footer>
+        
+    </footer>
 </body>
 </html>
