Added kit icons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 
+    <!--KIT DE ICONOS:-->
+    <script src="https://kit.fontawesome.com/fd85c1a586.js" crossorigin="anonymous"></script>
+
     <title>Perritos </title>
 </head> 
 <body>
@@ -115,7 +118,7 @@
         </aside>
     </div>
     <footer>
-        
+
     </footer>
 </body>
 </html>
