--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <p>Eros</p>
                         <p>Tamaño:<span> Grande</span></p>
                     </div>
-                    <i class="fa-solid fa-venus"></i>
+                    <i class="fa-solid fa-mars"></i>
                     <p class="description">Eros es un pastor belga con mucha energia. Le encanta jugar con los seres humanos y no es nada agresivo.</p>
                 </div>
                 <div class="photo_container">
@@ -114,7 +114,7 @@
                         <p>Milo</p>
                         <p>Tamaño:<span> Pequeño</span></p>
                     </div>
-                    <i class="fa-solid fa-venus"></i>
+                    <i class="fa-solid fa-mars"></i>
                     <p class="description">Milo es un pequeño lobito super jugueton y cariñoso. Va ha aprovechar la mas minima oportunidad para robarte unas caricias y es super pacifico.</p>
                 </div>
                 <div class="photo_container">
@@ -123,7 +123,7 @@
                         <p>Pikachu</p>
                         <p>Tamaño:<span> Grande</span></p>
                     </div>
-                    <i class="fa-solid fa-venus"></i>
+                    <i class="fa-solid fa-mars"></i>
                     <p class="description">Pikachu es un galgo de gran tamaño que le encanta pedir mimos constantemente. Le gusta mucho correr y jugar con otros perros.</p>
                 </div>
             </section>
