Added form base

--- a/index.html
+++ b/index.html
@@ -144,8 +144,12 @@
                     <p><b>R: </b>Sí, pero se recomienda elegir una raza o tamaño que se adapte bien a espacios pequeños y comprometerse a proporcionar suficiente ejercicio diario y estimulación mental.</p>
                 </div>
             </div>
-
-        </aside>
+            <div id="comentario_formulario">
+                <form method="post" action="">
+                    <input type="email" id="email" placeholder="Correo electrónico">
+                </form>
+            </div>
+        </aside>>
     </div>
     <footer>
 
