Created nav-bar with logo

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 </head> 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"> LOGO </a>
+        <nav>
+            <a class="nav-logo">
+                <img src="img/Huella.jpg" alt="Rescate Animal Granada">
+                <p>Rescate Animal Granada</p>
+            </a>
             <ul class="nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#"> Inicio </a>
                 </li>
                 <li class="nav-item">
@@ -43,7 +46,7 @@
                         <p>Tamaño:<span> Mediana</span></p>
                     </div>
                     <i class="fa-solid fa-venus"></i>
-                    <p class="description">PROVISIONAL Milo es un pequeño lobito super jugueton y cariñoso. Va ha aprovechar la mas minima oportunidad para robarte unas caricias y es super pacifico.</p>
+                    <p class="description">Dafne es super cariñosa y no piensa perder la oportunidad de recibir mimos. Es super sociable con otros lobitos y lleva mucho tiempo esperando encontrar la familia que le de una segunda oportunidad. Como muchos otros, este tipo de perros son criados para caza y luego abandonados, pero este caso sorprende por su capicidad para vivir en una casita y ser un gran perrito de compañia!</p>
                 </div>
                 <div class="photo_container">
                     <img src="img/Desider.jpeg" alt="Desider">
@@ -52,7 +55,7 @@
                         <p>Tamaño:<span> Grande</span></p>
                     </div>
                     <i class="fa-solid fa-venus"></i>
-                    <p class="description">PROVISIONAL Milo es un pequeño lobito super jugueton y cariñoso. Va ha aprovechar la mas minima oportunidad para robarte unas caricias y es super pacifico.</p>
+                    <p class="description">Este lobito es realmente precioso. Creemos que es de un criador de perigri debido a su belleza y su marca en la lengua. Es muy sociable con otros seres humanos. Actualmente Neska y el son novios. Desider sufre de leucemia canina y necesita una familia que le cuide.</p>
                 </div>
                 <div class="photo_container">
                     <img src="img/Eros.jpeg" alt="Eros">
@@ -106,7 +109,7 @@
                         <p>Tamaño:<span> Grande</span></p>
                     </div>
                     <i class="fa-solid fa-venus"></i>
-                    <p class="description">PROVISIONAL Milo es un pequeño lobito super jugueton y cariñoso. Va ha aprovechar la mas minima oportunidad para robarte unas caricias y es super pacifico.</p>
+                    <p class="description">Esta lobita es de las mas cariñosas que vas a encontrar en estas tierras. Siempre esta dispuesta a recibir mimos y se lleva bien con el resto de lobitos. Cuando dos se ladran suele meterse en medio para separarles, haciendo funciones de perro pastor a la antigua usanza. Fue abandonada con sus cachorros recien nacidos, los cuales ya han encontrado una familia feliz, ahora solo queda ella!</p>
                 </div>
                 <div class="photo_container">
                     <img src="img/Milo.jpeg" alt="Milo">
